src/main/java/com/example/configs/handler/errors/BadRequestException.java
package com.example.configs.handler.errors;

public class BadRequestException extends RuntimeException {
    private static final String DESCRIPTION = "Bad Request Exception";

    public BadRequestException(String detail) {
        super(DESCRIPTION + ". " + detail);
    }

}
